--- a/pick-simbol-4-player-1.html
+++ b/pick-simbol-4-player-1.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pick a symbol</title>
-  <link rel="stylesheet" href="css/normalize.css" type="text/css"/>
-  <link rel="stylesheet" href="css/main.css"/>
+  <link rel="stylesheet" href="dist/css/normalize.css" type="text/css"/>
+  <link rel="stylesheet" href="dist/css/main.css"/>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
           integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/9f481dee3a.js" crossorigin="anonymous"></script>
@@ -19,13 +19,13 @@
 <body>
 
 <section>
-  <div class="container full-width">
+  <div class="container full-width ">
     <div class="nav">
-      <a href="enter-your-name.html"><i class="fas fa-chevron-left"></i></a>
+      <a href="name-4-player-1.html"><i class="fas fa-chevron-left"></i></a>
       <a href="index.html"><img src="/public/images/logo.png" class="logo"/></a>
       <span><i class="fas fa-bars"></i></span>
     </div>
-    <div class="container utility-layout max-width-380">
+    <div class="container max-width-380 utility-layout">
       <h2 class="text-align-center margin-bottom-48">Pick a Symbol</h2>
       <ul class="symbol-row">
         <li><img src="/public/images/x's.png" class="symbol"/></li>
@@ -40,7 +40,7 @@
         <li><img src="/public/images/lizard.png" class="symbol"/></li>
       </ul>
       <div class="flex-row justify-center">
-        <a href="game-view-ai.html" class=" button big">Continue</a>
+        <a href="name-4-player-2.html" class=" button big">Continue</a>
       </div>
     </div>
   </div>
